fix too low contrast issue (#14)

--- a/src/pages/ProductPage.module.css
+++ b/src/pages/ProductPage.module.css
@@ -12,7 +12,7 @@
   display: inline-block;
   margin-top: 1em;
   text-decoration: none;
-  color: #646cff;
+  color: #3f46c8;
   font-weight: bold;
   transition: color 0.3s;
 }
